--- a/rulebenchmark/viz.ipynb
+++ b/rulebenchmark/viz.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4782,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,20 @@
     "import plotly.express as px\n",
     "import plotly.graph_objs as go\n",
     "from plotly.subplots import make_subplots\n",
-    "# import plotly.graph_objects as go"
+    "# import plotly.io as pio\n",
+    "# pio.renderers.default = \"svg\"  # for easier sharing the charts, e.g., on github, needs: pip install -U kaleido ; see https://plotly.com/python/renderers/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4783,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CORE_RI_PIPELINES = ['NATIVE-RIPPER', 'QUANTILE-BRCG', 'LENC-CART:4', 'TREES-BRCG'] # , 'TREES2-BRCG2',\n",
     "DEFAULT_RI_PIPELINES = ['NATIVE-RIPPER', 'LENC-CART:4', 'TREES-BRCG', 'TREES-CORELS', 'NATIVE-R2N']\n",
-    "# PREFERRED_RI_PIPELINES = ['NATIVE-RIPPER', 'QUANTILE-BRCG', 'TREES-CORELS', 'NATIVE-R2N', 'QUANTILE-BRCG2'] \n",
-    "# EXTENDED_RI_PIPELINES = DEFAULT_RI_PIPELINES + ['QUANTILE-BRCG']\n",
-    "RIPPER_PIPELINES = ['QUANTILE-RIPPER', 'TREES-RIPPER', 'NATIVE-RIPPER2', 'NATIVE-RIPPER3', 'NATIVE-RIPPER'] # \n",
-    "BRCG_PIPELINES = ['QUANTILE-BRCG', 'TREES-BRCG2', 'QUANTILE-BRCG2', 'TREES2-BRCG2', 'TREES2-BRCG', 'TREES-BRCG']  # \n",
-    "CORELS_PIPELINES = ['QUANTILE-CORELS','TREES-CORELS2', 'TREES2-CORELS2', 'TREES-CORELS'] # \n",
+    "RIPPER_PIPELINES = ['QUANTILE-RIPPER', 'TREES-RIPPER', 'NATIVE-RIPPER2', 'NATIVE-RIPPER3', 'NATIVE-RIPPER']\n",
+    "BRCG_PIPELINES = ['QUANTILE-BRCG', 'TREES-BRCG2', 'QUANTILE-BRCG2', 'TREES2-BRCG2', 'TREES2-BRCG', 'TREES-BRCG']\n",
+    "CORELS_PIPELINES = ['QUANTILE-CORELS','TREES-CORELS2', 'TREES2-CORELS2', 'TREES-CORELS']\n",
     "CART_PIPELINES = ['LENC-CART:*', 'LENC-CART:6', 'LENC-CART:4']\n",
     "ALL_RI_PIPELINES = RIPPER_PIPELINES + BRCG_PIPELINES + CORELS_PIPELINES + CART_PIPELINES + ['NATIVE-R2N']\n",
     "ALL_PIPELINES = ALL_RI_PIPELINES + ['LENC-XGB']\n",
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4784,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +122,6 @@
     "    fig = make_subplots(rows=3, cols=1,\n",
     "                    shared_xaxes=True,\n",
     "                    vertical_spacing=0.02)\n",
-    "\n",
-    "    # fig = go.Figure(layout=dict(title=dict(text=metric_long_name+' on '+df_long_name)))\n",
     "\n",
     "    for p in ['LENC-XGB'] + pipelines:\n",
     "        m = p + '_' + performance_metric\n",
@@ -182,8 +178,6 @@
     "                        shared_xaxes=True,\n",
     "                        vertical_spacing=0.02)\n",
     "\n",
-    "    # fig = go.Figure(layout=dict(title=dict(text=metric_long_name+' on '+df_long_name)))\n",
-    "\n",
     "    for p in ['LENC-XGB'] + pipelines:\n",
     "        m = p + '_' + performance_metric\n",
     "        scatter = go.Scatter(name=p, \n",
@@ -221,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4785,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +614,7 @@
        "[93 rows x 235 columns]"
       ]
      },
-     "execution_count": 4785,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4786,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4787,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1220,7 @@
        "[17 rows x 240 columns]"
       ]
      },
-     "execution_count": 4787,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4788,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1500,7 @@
        "16                 9                 4     0.4022         0.92  "
       ]
      },
-     "execution_count": 4788,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4789,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1594,6 +1588,7 @@
         }
        ],
        "layout": {
+        "height": 500,
         "legend": {
          "title": {
           "text": "variable"
@@ -2419,6 +2414,7 @@
         "title": {
          "text": "Core Suite: Imbalance"
         },
+        "width": 1000,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -2450,6 +2446,7 @@
    "source": [
     "fig = px.line(df_core_suite, x='data_set', y=['pos_ratio'], log_y=True, title='Core Suite: Imbalance')\n",
     "fig.update_traces(mode='markers+lines')\n",
+    "fig.update_layout(height=500, width=1000)\n",
     "fig.show()"
    ]
   },
@@ -2471,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4790,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3069,7 +3066,7 @@
        "[17 rows x 25 columns]"
       ]
      },
-     "execution_count": 4790,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3092,7 +3089,7 @@
     "\n",
     "# Create table\n",
     "pipelines = DEFAULT_PIPELINES\n",
-    "metrics = ['f2', 'recall', 'precision', 'adj_bal_acc']  # 'f', 'adj_bal_acc', 'acc', 'recall', 'precision'\n",
+    "metrics = ['f2', 'recall', 'precision', 'adj_bal_acc']  # 'f', 'acc'\n",
     "cols = ['data_set'] + [p+'_'+m for m in metrics for p in pipelines]\n",
     "df = df_core_suite[cols]\n",
     "df = df.sort_values('LENC-XGB_f2', ignore_index=True)\n",
@@ -3113,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4791,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4286,7 +4283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4792,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -6110,7 +6107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4793,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -7934,7 +7931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4794,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -9758,7 +9755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4795,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -11582,7 +11579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4796,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -13422,7 +13419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4797,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -17522,7 +17519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4798,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -19031,7 +19028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4799,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -21025,7 +21022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4800,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -22695,7 +22692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4801,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -24535,7 +24532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4802,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -24979,7 +24976,7 @@
        "[13 rows x 240 columns]"
       ]
      },
-     "execution_count": 4802,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24992,7 +24989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4803,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -26173,7 +26170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4804,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -26588,36 +26585,22 @@
        "[12 rows x 240 columns]"
       ]
      },
-     "execution_count": 4804,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "synth_noise_suite = [name for name in full_df['data_set'] if name.startswith('synth_noise')]\n",
-    "synth_noise_suite_df = full_df[full_df['data_set'].isin(synth_noise_suite)]\n",
+    "synth_noise_suite_df = full_df[full_df['data_set'].isin(synth_noise_suite)].copy()\n",
     "synth_noise_suite_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4805,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dr/x6h280jj4m3dnycsqrcj8lz00000gn/T/ipykernel_1544/3911777420.py:6: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -28182,7 +28165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4806,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -28597,36 +28580,22 @@
        "[12 rows x 240 columns]"
       ]
      },
-     "execution_count": 4806,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "suite = [name for name in full_df['data_set'] if name.startswith('synth_disj_')]\n",
-    "disj_df = full_df[full_df['data_set'].isin(suite)]\n",
+    "disj_df = full_df[full_df['data_set'].isin(suite)].copy()\n",
     "disj_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4807,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dr/x6h280jj4m3dnycsqrcj8lz00000gn/T/ipykernel_1544/467105555.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -30202,7 +30171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4808,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -30559,36 +30528,22 @@
        "[10 rows x 240 columns]"
       ]
      },
-     "execution_count": 4808,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "synth_linear_suite = [name for name in full_df['data_set'] if name.startswith('synth_linear_')]\n",
-    "synth_linear_suite_df = full_df[full_df['data_set'].isin(synth_linear_suite)]\n",
+    "synth_linear_suite_df = full_df[full_df['data_set'].isin(synth_linear_suite)].copy()\n",
     "synth_linear_suite_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4809,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dr/x6h280jj4m3dnycsqrcj8lz00000gn/T/ipykernel_1544/2521699105.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -32022,7 +31977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4810,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -32524,36 +32479,22 @@
        "[15 rows x 240 columns]"
       ]
      },
-     "execution_count": 4810,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "synth_conj_suite = [name for name in full_df['data_set'] if name.startswith('synth_conj_')]\n",
-    "synth_conj_suite_df = full_df[full_df['data_set'].isin(synth_conj_suite)]\n",
+    "synth_conj_suite_df = full_df[full_df['data_set'].isin(synth_conj_suite)].copy()\n",
     "synth_conj_suite_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4811,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dr/x6h280jj4m3dnycsqrcj8lz00000gn/T/ipykernel_1544/1526293485.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -34219,7 +34160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4812,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -34692,36 +34633,22 @@
        "[14 rows x 240 columns]"
       ]
      },
-     "execution_count": 4812,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "synth_size_suite = [name for name in full_df['data_set'] if name.startswith('synth_size_')]\n",
-    "synth_size_suite_df = full_df[full_df['data_set'].isin(synth_size_suite)]\n",
+    "synth_size_suite_df = full_df[full_df['data_set'].isin(synth_size_suite)].copy()\n",
     "synth_size_suite_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4813,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dr/x6h280jj4m3dnycsqrcj8lz00000gn/T/ipykernel_1544/2860553048.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -38482,7 +38409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4816,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
